Adds some test files and renames bad actions
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1163 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/purchases_products.html.haml
+++ b/app/views/management/purchases_products.html.haml
@@ -19,6 +19,6 @@
 
 - form_tag do
   .actions
-    =link_to tg(:previous), :action=>:purchases
+    =link_to tg(:previous), :action=>:purchase_orders
     - if @purchase_order.shipped == false
       =submit_tag(tc('validate'), :action=>:purchases_products) if @purchase_order.lines.size>0
