--- a/app/views/management/sale_order_summary.html.haml
+++ b/app/views/management/sale_order_summary.html.haml
@@ -8,7 +8,7 @@
 
 -if @sale_order.invoices.size>0
   %h2=tc :invoices
-  =dyta :invoices
+  =dyta :sale_order_invoices
 
 %h2=tc :financial_state
 .total
