--- a/app/views/management/sales_invoices.html.haml
+++ b/app/views/management/sales_invoices.html.haml
@@ -2,7 +2,7 @@
 
 -if @sale_order.invoices.size>0
   %h2=tc :invoices
-  =dyta :invoices
+  =dyta :sale_order_invoices
 
 -form_tag do
   -#if @rest_to_invoice
