--- a/app/views/management/stock_location.html.haml
+++ b/app/views/management/stock_location.html.haml
@@ -1,6 +1,6 @@
 = toolbar do
   - link :stock_location_update, :id=>@stock_location.id
-  - link :stocks_locations
+  - link :stock_location
 
 %table
   %tr
