--- a/app/views/management/_price_form.html.haml
+++ b/app/views/management/_price_form.html.haml
@@ -2,11 +2,11 @@
   - f.error 'price'
   - f.error 'price_tax'
   - f.title :general
-  - if @mode == :sales
+  - if @mode == :sale_orders
     - f.field :price, :product_id, :choices=>Product.find(:all,:conditions=>{:to_sale=>true, :company_id=>@current_company.id},:order=>:name).collect{|x| [x.name, x.id]}, :new=>{:action=>:product_create}
   - else 
     - f.field :price, :product_id, :choices=>Product.find(:all,:conditions=>{:to_purchase=>true, :company_id=>@current_company.id}).collect{|x| [x.name, x.id]}, :new=>{:action=>:product_create}
-  - if @mode != :sales
+  - if @mode != :sale_orders
     -f.field :price, :entity_id, :choices=>:entities
     -#f.field :price, :entity_id, :choices=>Entity.find(:all, :conditions=>{:company_id=>@current_company.id,:supplier=>true}).collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:relations,:action=>:entity_create} 
   - f.field :price, :amount
