--- a/app/views/management/_sale_order_line_form.html.haml
+++ b/app/views/management/_sale_order_line_form.html.haml
@@ -4,9 +4,9 @@
   - f.error :sale_order_line
   - f.error :subscription
   - f.title :infos
-  -# f.field :sale_order_line, :price_id, :choices=>:price, :new=>{:action=>:price_create, :mode=>:sales}
-  -#f.field :sale_order_line, :price_id, :choices=>Price.find(:all,:conditions=>{:company_id=>@current_company.id,:entity_id=>@current_company.entity_id, :active=>true, :category_id=>@sale_order.client.category.id}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]}, :new=>{:action=>:price_create, :mode=>:sales}
-  -f.field :sale_order_line, :price_id, :choices=>@current_company.available_prices.collect{|x| [x.label, x.id]}, :new=>{:action=>:price_create, :mode=>:sales}
+  -# f.field :sale_order_line, :price_id, :choices=>:price, :new=>{:action=>:price_create, :mode=>:sale_orders}
+  -#f.field :sale_order_line, :price_id, :choices=>Price.find(:all,:conditions=>{:company_id=>@current_company.id,:entity_id=>@current_company.entity_id, :active=>true, :category_id=>@sale_order.client.category.id}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]}, :new=>{:action=>:price_create, :mode=>:sale_orders}
+  -f.field :sale_order_line, :price_id, :choices=>@current_company.available_prices.collect{|x| [x.label, x.id]}, :new=>{:action=>:price_create, :mode=>:sale_orders}
   - f.field :sale_order_line, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]} if @stock_locations.size > 1
   - f.field :sale_order_line, :quantity
   - f.field :sale_order_line, :annotation, :field=>:textarea
