--- a/app/views/relations/entity_category.html.haml
+++ b/app/views/relations/entity_category.html.haml
@@ -10,5 +10,5 @@
     
 %h2=tc :prices, :count=>@category_prices_count
 =toolbar do
-  -link :price_create, {:controller=>:management, :mode=>:sales}
+  -link :price_create, {:controller=>:management, :mode=>:sale_orders}
 =dyta :category_prices
