--- a/app/views/management/prices.html.haml
+++ b/app/views/management/prices.html.haml
@@ -7,8 +7,8 @@
       =select(:price, :supply, @suppliers.collect{|x| [x.full_name,x.id]})
       =submit_tag tg('filter')
 =toolbar do
-  -link :sales_prices_create, {:action=>:price_create, :mode=>:sale_orders}
-  -link :purchases_prices_create, {:action=>:price_create, :mode=>:purchase_orders}
+  -link :sale_order_price_create, {:action=>:price_create, :mode=>:sale_orders}
+  -link :purchase_order_price_create, {:action=>:price_create, :mode=>:purchase_orders}
   -link :prices_export
   -link :prices_import
 
