--- a/app/views/relations/_entity_form.html.haml
+++ b/app/views/relations/_entity_form.html.haml
@@ -6,6 +6,7 @@
   -f.field :entity, :language_id, :choices=>@current_company.languages.find(:all, :order=>:native_name).collect {|x| [x.native_name, x.id]}
   -f.field :entity, :name
   -f.field :entity, :first_name
+  -f.field :entity, :active
   -f.field :entity, :client
   -f.field :entity, :supplier
   -f.title :details
