--- a/app/views/management/product.html.haml
+++ b/app/views/management/product.html.haml
@@ -31,8 +31,8 @@
 -if @product.to_sale or @product.to_purchase
   %h2=tc :prices
   =toolbar do |t|
-    -t.link(:sale_price_create, {:action=>:price_create, :mode=>:sale_orders, :product_id=>session[:product_id]}) if @product.to_sale
-    -t.link(:purchase_price_create, {:action=>:price_create, :mode=>:purchase_orders, :product_id=>session[:product_id]}) if @product.to_purchase
+    -t.link(:sale_price_create, {:action=>:price_create, :mode=>:sales, :product_id=>session[:product_id]}) if @product.to_sale
+    -t.link(:purchase_price_create, {:action=>:price_create, :mode=>:purchases, :product_id=>session[:product_id]}) if @product.to_purchase
 
   =dyta :product_prices
 
