improve products search, begin to implement transports
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1193 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/_user_form.html.haml
+++ b/app/views/company/_user_form.html.haml
@@ -9,9 +9,15 @@
   -f.field :user, :password
   -f.field :user, :password_confirmation
   -f.field :user, :admin
-  -f.field  t("views.company._users_form.employee"), check_box_tag(:create_employee)
+  -if !@user.new_record?
+    -if @user.employee.nil?
+      -f.field  t("views.company._users_form.employee"), check_box_tag(:create_employee)
+  -else
+    -f.field  t("views.company._users_form.employee"), check_box_tag(:create_employee) 
 
-#employee=render :partial=>"resources/employee_form", :locals=>{:create_user=>true}
+-if !@user.new_record?
+  -if @user.employee.nil?
+    #employee=render :partial=>"resources/employee_form", :locals=>{:create_user=>true}
  
 =formalize(:id=>:show_rights) do |f|
   -f.title :rights
