--- a/app/views/relations/_entity_form.html.haml
+++ b/app/views/relations/_entity_form.html.haml
@@ -9,6 +9,7 @@
   -f.field :entity, :active
   -f.field :entity, :client
   -f.field :entity, :supplier
+  -f.field :entity, :transporter
   -f.title :details
   -f.field :entity, :country,:choices=>countries
   -f.field :entity, :siren
