transports, complete help
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1197 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_transport_deliveries.html.haml
+++ b/app/views/management/_transport_deliveries.html.haml
@@ -1,11 +1,14 @@
 =dyta :transport_deliveries
-
-%table.formalize
-  %tr.title
-    %th=tc(:add_delivery)
-  %tr.field
-    %td.label=tc(:delivery)
-    %td.input=dyli_tag('delivery[id]', :deliveries, :resize=>true)
-
+-form_tag(:action=>:transport_deliveries) do 
+  %table.formalize
+    %tr.title
+      %th=tc(:add_delivery)
+    %tr.field
+      %td.label=tc(:delivery)
+      %td.input=dyli_tag('delivery[id]', :deliveries, :resize=>true)
+  .actions
+    =link_to(tc(:back), :action=>:transports)
+    =submit_tag(tc(:add), :action=>:transport_deliveries)
+   
 
 
