--- a/app/views/management/_transport_deliveries.html.haml
+++ b/app/views/management/_transport_deliveries.html.haml
@@ -2,7 +2,7 @@
 -form_tag(:action=>:transport_deliveries) do 
   %table.formalize
     %tr.title
-      %th=tc(:add_delivery)
+      %th{:colspan=>2}=tc(:add_delivery)
     %tr.field
       %td.label=tc(:delivery)
       %td.input=dyli_tag('delivery[id]', :deliveries, :resize=>true)
@@ -12,3 +12,4 @@
    
 
 
+ 
