--- a/app/views/management/sale_order.html.haml
+++ b/app/views/management/sale_order.html.haml
@@ -37,7 +37,7 @@
   %h2= tc 'payments'
   =toolbar do |t|
     -t.link :payment_create if @sale_order.state == 'R' and @sale_order.unpaid_amount>0
-  =dyta :payments
+  =dyta :sale_order_payments
 
 -if @sale_order.subscriptions.count>0
   %h2= tc :subscriptions
