--- a/app/views/company/_document_template_form.html.haml
+++ b/app/views/company/_document_template_form.html.haml
@@ -1,8 +1,11 @@
 =formalize do |f|
   -f.error 'document_template'
   -f.field :document_template, :name
+  -f.field :document_template, :code
+  -f.field :document_template, :family, :choices=>DocumentNature.families
+  -f.field :document_template, :to_archive
   -f.field :document_template, :active
-  -f.field :document_template, :nature_id, :choices=>@current_company.document_natures.collect{|x| [x.name, x.id]}, :new=>{:action=>:document_nature_create}
+  -#f.field :document_template, :nature_id, :choices=>@current_company.document_natures.collect{|x| [x.name, x.id]}, :new=>{:action=>:document_nature_create}
   -f.field :document_template, :language_id, :choices=>@current_company.languages.collect{|x| [x.native_name, x.id]}
   -f.field :document_template, :country, :choices=>countries
   -f.field :document_template, :source, :field=>:textarea, :options=>{:cols=>80, :rows=>30}, :class=>:code
