--- a/app/views/company/_document_template_form.html.haml
+++ b/app/views/company/_document_template_form.html.haml
@@ -2,7 +2,7 @@
   -f.error 'document_template'
   -f.field :document_template, :name
   -f.field :document_template, :code
-  -f.field :document_template, :family, :choices=>DocumentNature.families
+  -f.field :document_template, :family, :choices=>DocumentTemplate.families
   -f.field :document_template, :to_archive
   -f.field :document_template, :active
   -f.field :document_template, :language_id, :choices=>@current_company.languages.collect{|x| [x.native_name, x.id]}
