--- a/app/views/company/listing_mail.html.haml
+++ b/app/views/company/listing_mail.html.haml
@@ -1,1 +1,17 @@
-=mail_to('?'+@mails.collect{|m| 'bcc='+m}.join('&')+"&body=--%0A#{@current_user.label}%0A#{@current_company.entity.full_name}", tc(:click_to_mail))
+=toolbar do |t|
+  -t.mail '?'+@mails.collect{|m| 'bcc='+m}.join('&')+"&body=--%0A#{@current_user.label}%0A#{@current_company.entity.full_name}", tc(:click_to_mail)
+
+%h2=tc(:personalized_mail)
+.count=tc(:mails, :count=>@mails.size)
+.count=tc(:available_columns, :columns=>@columns.join(", "))
+
+-form_tag({}, :multipart=>true) do
+  =formalize do |f|
+    -f.field tc(:from),    text_field_tag(:from, session[:mail][:from]||@current_user.email, :size=>40)
+    -f.field tc(:subject), text_field_tag(:subject, session[:mail][:subject]||tc(:default_subject, :company=>@current_company.name), :size=>80)
+    -f.field tc(:body),    text_area_tag(:body, session[:mail][:body], :cols=>80, :rows=>20)
+    -f.field tc(:attachment), file_field_tag(:attachment)
+  .actions
+    =submit_tag tc(:send_test), :name=>:send_test
+    =submit_tag tc(:send), :confirm=>tg(:are_you_sure), :name=>:send
+
