git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1219 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_payment_form.html.haml
+++ b/app/views/management/_payment_form.html.haml
@@ -1,13 +1,13 @@
--if @operation != :update and @payments.size>0
+-if @operation != :update and @current_company.usable_payments.size>0
   .payments
     -for mode in @modes
       =radio_button(:price, :mode , mode, :checked=>( mode=="new" ? true : false))+"&nbsp;"+content_tag(:label, tc(mode), :for=>'price_mode_'+mode)
 
 =error_messages_for 'payment'
 
--if @operation != :update and @payments.size>0
+-if @operation != :update  and @current_company.usable_payments.size>0
   =formalize(:id=>:existing_payment) do |f|
-    -f.field tc(:unused_payment), select(:pay, :part, @payments.collect{|x| [tc(:payment_label, :amount=>x.amount.to_s, :date=>x.created_at.to_date, :mode=>x.mode.name, :usable_amount=>(x.amount - x.parts_amount).to_s) , x.id]})
+    -f.field tc(:unused_payment), select(:pay, :part, @current_company.usable_payments.collect{|x| [tc(:payment_label, :amount=>x.amount.to_s, :date=>x.created_at.to_date, :mode=>x.mode.name, :usable_amount=>(x.amount - x.parts_amount).to_s, :entity=>x.entity.full_name, :cn=>x.check_number), x.id]})
 
 =formalize(:id=>:new_payment) do |f|
   -f.title :title
