Adds Transfer and updates PaymentPart. Fixes some bug and cleans payment saves.
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1221 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/payment.html.haml
+++ b/app/views/management/payment.html.haml
@@ -1,7 +1,11 @@
+=toolbar do |t|
+  -t.link :payment_update, :id=>@payment.id
+
 
 %table
   %tr
     %td
+      =evalue @payment, :number
       =evalue @payment, :amount
       =evalue @payment, :parts_amount
       =evalue @payment, :entity, :label=>:full_name, :url=>{:controller=>:relations, :action=>:entity}
