--- a/app/views/relations/mandates_configure.html.haml
+++ b/app/views/relations/mandates_configure.html.haml
@@ -1,4 +1,4 @@
-- form_tag(:action=>:mandates_config) do 
+- form_tag(:action=>:mandates_configure) do 
   %table.dyta
     %tr
       %th=tc(:column)
