load demo data, payment_create....
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1227 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/register.html.haml
+++ b/app/views/authentication/register.html.haml
@@ -15,7 +15,7 @@
       %table.formalize
         %tr.field
           %td.label=tc(:load_demo_data)
-          %td.input=check_box_tag(:demo, :load_data)
+          %td.input=check_box_tag(:demo, :load_data, :checked=>true)
       .actions
         -if defined?(Ekylibre::DONT_REGISTER)
           =text_field_tag :register_password
