--- a/app/views/management/sale_order_lines.html.haml
+++ b/app/views/management/sale_order_lines.html.haml
@@ -2,9 +2,9 @@
 
 = toolbar do |t|
   - if @sale_order.lines.size>0
-    - if @sale_order.estimate?
+    - if (@sale_order.estimate? and @sale_order.deliveries.size <= 0)
       - t.link :sale_order_confirm, {:id=>@sale_order.id}, :method=>:post, :confirm=>tc(:are_you_sure_to_confirm)
-    - if @sale_order.amount_with_taxes > @sale_order.invoiced_amount
+    - if (@sale_order.amount_with_taxes > @sale_order.invoiced_amount and @sale_order.deliveries.size <= 0)
       - t.link :sale_order_invoice, {:id=>@sale_order.id}, :method=>:post, :confirm=>tc(:are_you_sure_to_invoice)
   -# if @sale_order.estimate?
     -# t.link(:sale_order_update, {:id=>@sale_order.id})
