--- a/app/views/management/invoices.html.haml
+++ b/app/views/management/invoices.html.haml
@@ -1,4 +1,4 @@
-.count=tc(:nb_invoices, :count=>@current_company.invoices.size)
+.count=#tc(:nb_invoices, :count=>@current_company.invoices.size)
 
 =render :partial=>'invoices_search'
 
