--- a/app/views/management/products.html.haml
+++ b/app/views/management/products.html.haml
@@ -1,4 +1,4 @@
-.count=tc(:nb_products, :count=>@current_company.available_products.size)
+.count=#tc(:nb_products, :count=>@current_company.available_products.size)
 
 =render :partial=>'products_search'
 
