--- a/app/views/management/sale_order_summary.html.haml
+++ b/app/views/management/sale_order_summary.html.haml
@@ -7,7 +7,7 @@
   =dyta :sale_order_payment_parts
 
 -if @sale_order.invoices.size>0
-  %h2=tc :invoices
+  %h2=tc :invoice
   =dyta :sale_order_invoices
 
 %h2=tc :financial_state
