--- a/app/views/management/invoice.html.haml
+++ b/app/views/management/invoice.html.haml
@@ -20,6 +20,6 @@
 =dyta :invoice_credit_lines
 
 
-- if !@invoice.credit
+- if !@invoice.credit and @invoice.credits.size > 0
   %h2= tc(:credits)
   =dyta :credits
