--- a/app/views/relations/index.html.haml
+++ b/app/views/relations/index.html.haml
@@ -4,3 +4,7 @@
   %h2= tg('indicator')
   %ul
     =li_link_to tc('nb_entities',:count=>@entities.size), :controller=>:relations, :action=>:entities
+
+-if @current_company.events.size > 0
+  %h2=tc(:last_events)
+  =dyta(:recent_events)
