purchase_orders updates
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1237 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sale_orders.html.haml
+++ b/app/views/management/sale_orders.html.haml
@@ -1,12 +1,13 @@
 .count=#tc(:nb_sales, :count=>@current_company.sale_orders.size)
-- form_tag do
-  .search
-    .center
-      =tc('search_sales')
-      =text_field_tag :key, session[:sale_order_key]
-      - [:all, :current, :unpaid].each do |state|
-        =radio_button(:sale_order, :state , state, :checked=>( state.to_s == session[:sale_order_state] ? true : false))+"&nbsp;"+content_tag(:label, tc(state), :for=>'sale_order_'+state.to_s)
-      =submit_tag tg('search_go', :action=>:sale_orders)
+.search
+  - form_tag do
+    %table
+      %tr
+        %td.label=tc('search_sales')
+        %td.field=text_field_tag :key, session[:sale_order_key]
+        - [:all, :current, :unpaid].each do |state|
+          %td=radio_button(:sale_order, :state , state, :checked=>( state.to_s == session[:sale_order_state] ? true : false))+"&nbsp;"+content_tag(:label, tc(state), :for=>'sale_order_'+state.to_s)
+        %td=submit_tag tg('search_go', :action=>:sale_orders)
 
 =dyta :sale_orders
 
