--- a/app/views/management/_invoices_search.html.haml
+++ b/app/views/management/_invoices_search.html.haml
@@ -4,4 +4,6 @@
       %tr
         %td.label=tc(:search)
         %td.field=text_field_tag :key, session[:invoice_key]
+        -[:all, :credits, :cancelled].each do |state|
+          %td=radio_button(:invoice, :state, state, :checked=>(state.to_s == session[:invoice_state] ? true : false))+"&nbsp;"+content_tag(:label, tc(state), :for=>'invoice_'+state.to_s)
         %td.submit=submit_tag tg(:search_go)
