--- a/app/views/management/_payment_part_form.html.haml
+++ b/app/views/management/_payment_part_form.html.haml
@@ -5,7 +5,7 @@
 #existing_payment
   =formalize do |f|
     -f.title tc(:select_existing_payment)
-    -f.field tc(:unused_payment), select(:pay, :part, @current_company.usable_payments.collect{|x| [tc(:payment_label, :amount=>x.amount.to_s, :date=>x.created_at.to_date, :mode=>x.mode.name, :usable_amount=>(x.amount - x.parts_amount).to_s, :entity=>x.entity.full_name, :number=>x.number), x.id]})
+    -f.field tc(:unused_payment), select(:pay, :part, @current_company.usable_payments.collect{|x| [tc(:payment_label, :amount=>x.amount.to_s, :date=>x.created_at.to_date, :mode=>x.mode.name, :usable_amount=>x.unused_amount.to_s, :entity=>x.entity.full_name, :number=>x.number), x.id]})
 
 #create_payment=render :partial=>'payment_form'
 
