--- a/app/views/management/purchase_order_summary.html.haml
+++ b/app/views/management/purchase_order_summary.html.haml
@@ -3,8 +3,8 @@
 - if @purchase_order.amount_with_taxes > 0
   %h2=tc :payments
   =toolbar do |t|
-    -t.link :payment_part_create 
-  =#dyta :purchase_order_payment_parts
+    -t.link :payment_part_create, :expense_type=>:purchase_order, :expense_id=>@purchase_order.id if @purchase_order.editable
+  =dyta :purchase_order_payment_parts
 
 %h2=tc(:products)
 =dyta :purchase_order_lines
