document templates, purchase orders, tabbox, entity lock.......
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1244 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/purchase_order.html.haml
+++ b/app/views/management/purchase_order.html.haml
@@ -11,6 +11,7 @@
       =evalue @purchase_order, :comment
     %td
       =evalue @purchase_order, :dest_contact, :label=>:address
+      =evalue @purchase_order, :shipped
 
 %h2=tc :lines
 =dyta :purchase_order_lines
