--- a/app/views/management/purchase_orders.html.haml
+++ b/app/views/management/purchase_orders.html.haml
@@ -1,2 +1,2 @@
-.count=tc(:nb_purchases, :count=>@current_company.purchase_orders.size)
+.count=#tc(:nb_purchases, :count=>@current_company.purchase_orders.size)
 =dyta :purchase_orders
