prints links, models
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1245 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sale_order.html.haml
+++ b/app/views/management/sale_order.html.haml
@@ -1,6 +1,7 @@
 =toolbar do |t|
   -t.link :sale_order_lines, :id=>@sale_order.id
-  -t.link :sale_order_print, :id=>@sale_order.id
+  -#t.link :sale_order_print, :id=>@sale_order.id
+  -t.print :sale_order, :id=>@sale_order.id
 
 %h2= tc 'general_informations'
 %table
