--- a/app/views/management/purchase_order.html.haml
+++ b/app/views/management/purchase_order.html.haml
@@ -1,6 +1,7 @@
 =toolbar do |t|
   -t.link :purchase_order_lines, :id=>@purchase_order.id
-  -t.link :purchase_order_print, :id=>@purchase_order.id
+  -#t.link :purchase_order_print, :id=>@purchase_order.id
+  -t.print :purchase_order, :id=>@purchase_order.id
 
 %h2= tc 'general_informations'
 %table
