--- a/app/views/company/_document_template_form.html.haml
+++ b/app/views/company/_document_template_form.html.haml
@@ -9,4 +9,5 @@
   -f.field :document_template, :active
   -f.field :document_template, :language_id, :choices=>@current_company.languages.collect{|x| [x.native_name, x.id]}
   -f.field :document_template, :country, :choices=>countries
+  -f.field :document_template, :filename
   -f.field :document_template, :source, :field=>:textarea, :options=>{:cols=>80, :rows=>30}, :class=>:code
