additions of tax declaration, accountizing of commercial module and improvment of entries.
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1247 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/tax_declaration.html.haml
+++ b/app/views/accountancy/tax_declaration.html.haml
@@ -9,17 +9,17 @@
       %th{:colspan=>3}=tc :assessable_operations
     %tr
       %td=tc :code  
-      %td{:colspan=>3}=tc :vat_acquisition
+      %td=tc :vat_acquisition
       %td="0031" 
       %td  
     %tr
       %td=tc :code  
-      %td{:colspan=>3}=tc :others_assessable_operations
+      %td=tc :others_assessable_operations
       %td="0981"
       %td      
     %tr
       %td=tc :code  
-      %td{:colspan=>3}=tc :delivery_natural_gas_and_electricity
+      %td=tc :delivery_natural_gas_and_electricity
       %td="0030"
       %td      
     
