--- a/app/views/accountancy/_tax_declaration_form.html.haml
+++ b/app/views/accountancy/_tax_declaration_form.html.haml
@@ -7,10 +7,12 @@
   - f.field :tax_declaration, :stopped_on
   - f.field :tax_declaration, :address, :field=>:textarea
 
-=observe_field "tax_declaration_period_monthly", :frequency => 0.25, :update=>"tax_declaration_stopped_on", :url=>{:action =>:tax_declaration_period_search}, :with=>"'period='+escape(value)+'&started_on='+$F('tax_declaration_started_on')"
+=observe_field "tax_declaration_period_monthly", :frequency => 0.25, :url=>{:action =>:tax_declaration_period_search}, :with=>"'period='+escape(value)+'&started_on='+$F('tax_declaration_started_on')"
 
-=observe_field "tax_declaration_period_quarterly", :frequency => 0.25, :update=>"tax_declaration_stopped_on", :url=>{:action =>:tax_declaration_period_search}, :with=>"'period='+escape(value)+'&started_on='+$F('tax_declaration_started_on')"
+=observe_field "tax_declaration_period_quarterly", :frequency => 0.25, :url=>{:action =>:tax_declaration_period_search}, :with=>"'period='+escape(value)+'&started_on='+$F('tax_declaration_started_on')"
 
-=observe_field "tax_declaration_period_yearly", :frequency => 0.25, :update=>"tax_declaration_stopped_on", :url=>{:action =>:tax_declaration_period_search}, :with=>"'period='+escape(value)+'&started_on='+$F('tax_declaration_started_on')"
+=observe_field "tax_declaration_period_yearly", :frequency => 0.25, :url=>{:action =>:tax_declaration_period_search}, :with=>"'period='+escape(value)+'&started_on='+$F('tax_declaration_started_on')"
 
-=observe_field "tax_declaration_period_other", :frequency => 0.25, :update=>"tax_declaration_stopped_on", :url=>{:action =>:tax_declaration_period_search}, :with=>"'period='+escape(value)+'&started_on='+$F('tax_declaration_started_on')"
+=observe_field "tax_declaration_period_other", :frequency => 0.25, :url=>{:action =>:tax_declaration_period_search}, :with=>"'period='+escape(value)+'&started_on='+$F('tax_declaration_started_on')"
+
+#stopped_period=render :partial=>"tax_declaration_period_search"
