--- a/app/views/accountancy/bank_account_statement.html.haml
+++ b/app/views/accountancy/bank_account_statement.html.haml
@@ -5,5 +5,5 @@
 =evalue(@bank_account_statement.bank_account, :name)
 =evalue(@bank_account_statement, :credit)
 =evalue(@bank_account_statement, :debit)
-=dyta(:entries_statement)
+=dyta(:statements_entries)
 
