--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -1,21 +1,36 @@
-- if @valid
-  %h1=tc(:subtitle, :journal=>@journal.name, :financialyear=>@financialyear.code)
-- if @valid
-  #update_params.toolbar
-    =link_to_function tc(:update_params), "$('params').show(); $('update_params').hide();"
-#params.fore
-  - form_tag(:action => :params_entries) do
-    =formalize do |f|
-      - f.field tc(:select_financialyear), select_tag("financialyear_id", options_for_select(@financialyears.collect{|j| [j.code.to_s, j.id.to_s]}, session[:entries][:financialyear].to_s))
-      - f.field tc(:select_journal), select_tag("journal_id", options_for_select(@journals.collect{|j| [tc(:journal_x, :name=>j.name, :closed_on=>j.closed_on.to_s), j.id]}, session[:entries][:journal].to_i))
-      - f.field tc(:number_records), text_field_tag("number", session[:entries][:records_number], :size=>2, :tabindex => 1)
-    .actions
-      =submit_tag tg('apply')
-      - if @valid
-        =link_to_function tg('cancel'), "$('params').hide(); $('update_params').show();"
+.search
+  - form_tag do
+    %table
+      %tr
+        %td.label=tc(:select_journal)
+        %td.field=select_tag("journal_id", options_for_select([tc(:all_journals)]+@journals.collect{|j| [tc(:journal_x, :name=>j.name, :closed_on=>j.closed_on.to_s), j.id]}, session[:entries][:journal].to_i))
+        %td.label=tc(:select_financialyear)
+        %td.field=select_tag("financialyear_id", options_for_select([tc(:all_financialyears)]+@financialyears.collect{|f| [f.code.to_s, f.id.to_s]}, session[:entries][:financialyear].to_s))
+        %td.submit=submit_tag tg("apply")
 
-- if @valid
+- if @valid 
   #errors=render :partial=>'errors'
-  #lines=render  :partial=>'entries'
-  =javascript_tag("$('params').hide(); $('record_number').focus(); $('record_number').select(); ")
+  - form_remote_tag (:url=>{:action=>:entry_create}, :loading=>"onLoading();", :loaded=>"onLoaded();") do 
+    %table.dyta
+      %tr
+        %th=tc :record_number
+        %th=tc :record_created
+        %th=tc :record_printed
+        %th=tc :label
+        %th=tc :account_number
+        %th=tc :record_debit
+        %th=tc :record_credit
+        %th
+      %tr
+        %td=text_field :record, :number, {:size=>5}
+        %td=text_field_tag 'record[created_on]', I18n.localize(@record.created_on)
+        %td=text_field_tag 'record[printed_on]', I18n.localize(@record.printed_on)
+        %td=text_field :entry,  :name, {:size=>16}
+        %td=dyli_tag 'entry[account_id]', :account, :resize=>true 
+        %td=text_field :entry, :currency_debit, {:size=>7}
+        %td=text_field :entry, :currency_credit, {:size=>7}
+        %td=submit_tag tc(:entry_validate) 
 
+=dyta :entries
+
+  
