--- a/app/views/relations/areas.html.haml
+++ b/app/views/relations/areas.html.haml
@@ -1,3 +1,11 @@
+.search
+  - form_tag do
+    %table
+      %tr
+        %td.label=tc(:search)
+        %td.field=text_field_tag :key, @key
+        %td.submit=submit_tag tg("apply")
+
 =toolbar do
   -link :area_create
 =dyta :areas
