areas and districts can be researched more precisely
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1248 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/areas.html.haml
+++ b/app/views/relations/areas.html.haml
@@ -1,10 +1,5 @@
-.search
-  - form_tag do
-    %table
-      %tr
-        %td.label=tc(:search)
-        %td.field=text_field_tag :key, @key
-        %td.submit=submit_tag tg("apply")
+
+=render :partial=>'areas_search'
 
 =toolbar do
   -link :area_create
