--- a/app/views/relations/districts.html.haml
+++ b/app/views/relations/districts.html.haml
@@ -1,10 +1,6 @@
-.search
-  - form_tag do
-    %table
-      %tr
-        %td.label=tc(:searlect_district)
-        %td.field=select_tag("district_id", options_for_select([tc(:all_districts)]+@districts.collect{|d| [tc(:district_x, :name=>d.name, :code=>d.code.to_s), d.id]}, session[:district]))
-        %td.submit=submit_tag tg("apply")
+
+
+=render :partial=>'districts_search'
 
 =toolbar do
   -link :district_create
