--- a/app/views/shared/form_update.html.haml
+++ b/app/views/shared/form_update.html.haml
@@ -2,5 +2,5 @@
   =render :partial=>@partial
   .actions
     =submit_tag(tg(@options[:submit]||:update))
-    =link_to_back :label=>@options[:cancel]||:cancel
+    =link_to_back, :label=>@options[:cancel]||:cancel
 
