git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1255 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/invoice.html.haml
+++ b/app/views/management/invoice.html.haml
@@ -1,5 +1,6 @@
 =toolbar do |t|
-  -t.link :invoice_print, :id=>@invoice.id
+  -#t.link :invoice_print, :id=>@invoice.id
+  -t.print :invoice, :id=>@invoice.id
   -t.link :invoice_cancel, :id=>@invoice.id if @invoice.creditable?
 
 %table
