--- a/app/views/management/sale_order_deliveries.html.haml
+++ b/app/views/management/sale_order_deliveries.html.haml
@@ -1,7 +1,7 @@
 =sale_steps
 
 =toolbar do |t|
-  -t.link :sale_order_print, :id=>@sale_order.id
+  -t.print :sale_order, :id=>@sale_order.id
   -#t.link(:sale_order_invoice, {:id=>@sale_order.id}, {:method=>:post, :confirm=>tc(:are_you_sure_to_invoice)}) if @sale_order.amount_with_taxes > @sale_order.invoiced_amount
   -t.link(:sale_order_invoice, {:id=>@sale_order.id, :has_deliveries=>true}, {:method=>:post, :confirm=>tc(:are_you_sure_to_invoice)}) if not @sale_order.invoiced
 
