--- a/app/views/management/_sale_order_line_form.html.haml
+++ b/app/views/management/_sale_order_line_form.html.haml
@@ -11,21 +11,9 @@
   - f.field :sale_order_line, :quantity
   - f.field :sale_order_line, :annotation, :field=>:textarea
 
-#subscription_number{:style=>'display:none'}
-  =formalize do |f|
-    - f.field :subscription, :first_number
-    - f.field :subscription, :last_number
-    - #f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
-
-#subscription_date{:style=>'display:none'}
-  =formalize do |f|
-    - f.field :subscription, :started_on
-    - f.field :subscription, :stopped_on
-    -# f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
-
-#subscriptions{:style=>'display:none'}
-  =formalize do |f|
-    - f.field :subscription, :contact_id, :choices=>:subscription_contacts
+#subscription_number=render :partial=>'subscription_number'
+  
+#subscription_date=render :partial=>'subscription_period'
 
 -#if @current_user.free_price
 =formalize do |f|
