--- a/app/views/relations/_coordinates_form.html.haml
+++ b/app/views/relations/_coordinates_form.html.haml
@@ -2,8 +2,7 @@
   -f.title :address
   -f.field :contact, :line_2
   -f.field :contact, :line_3
-  -f.field :contact, :line_4_number
-  -f.field :contact, :line_4_street
+  -f.field :contact, :line_4
   -f.field :contact, :line_5
   -f.field  t("activerecord.attributes.contact.line_6"), text_field_with_auto_complete(:contact, :line_6)
   -f.field :contact, :country, :choices=>t("countries"), :options=>{:include_blank=>true}
