git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1269 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_tax_form.html.haml
+++ b/app/views/accountancy/_tax_form.html.haml
@@ -7,5 +7,7 @@
     -f.field t('activerecord.attributes.tax.nature'), @tax.nature_label
     -f.field t('activerecord.attributes.tax.amount'), @tax.amount.to_s
   -f.field :tax, :name
+  -f.field :tax, :account_collected_id, :choices=>:account_collected, :resize=>true
+  -f.field :tax, :account_paid_id, :choices=>:account_paid, :resize=>true
   -f.field :tax, :included
   -f.field :tax, :reductible
