git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1276 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/production/shape_operations.html.haml
+++ b/app/views/production/shape_operations.html.haml
@@ -1,3 +1,5 @@
 =toolbar do
   -link :shape_operation_create
 =dyta :shape_operations
+
+=puts @current_company.shape_operations.find_by_id(6).inspect
