--- a/app/views/production/_shape_operation_form.html.haml
+++ b/app/views/production/_shape_operation_form.html.haml
@@ -1,5 +1,10 @@
 = formalize do |f|
+  - tools = @current_company.tools
   - f.error :shape_operation
+  - if tools.size > 0 
+    - f.title :tools
+    - @current_company.tools.each do |tool|
+      - f.field content_tag(:label, tool.name, :for=>"tools_#{tool.id}"), check_box_tag("tools[#{tool.id}]" ,"1", false, :id=>"tools_#{tools.id}")
   - f.title :infos
   - f.field :shape_operation, :name
   - f.field :shape_operation, :shape_id, :choices=>@current_company.shapes.collect{|x| [x.name+" ( "+x.polygon+" )", x.id]}, :new=>{:action=>:shape_create}
