--- a/app/views/production/shape_operations.html.haml
+++ b/app/views/production/shape_operations.html.haml
@@ -2,4 +2,4 @@
   -link :shape_operation_create
 =dyta :shape_operations
 
-=puts @current_company.shape_operations.find_by_id(6).inspect
+=puts @current_company.shape_operations.find_by_id(7).tools.first.id.inspect
